test/extern/ferguson/opaque-type-implicit-conversion.good
opaque-type-implicit-conversion.chpl:4: In function 'foo':
opaque-type-implicit-conversion.chpl:5: error: could not find a copy initializer ('init=') for type 'int' from type 'myint'
